--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ torchaudio==2.0.2
 # matplotlib
 # seaborn
 # scipy
+
+# textless @ git+https://github.com/facebookresearch/textlesslib@ba33d66
+fairseq @ git+https://github.com/pytorch/fairseq@dd106d9
